--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 		<dependency>
 		    <groupId>org.webjars</groupId>
