Filtros para busqueda de desaparecidos y peritajes agregados

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Sistema de gestión de peritajes</description>
 	<properties>
 		<java.version>16</java.version>
+		<start-class>com.digitalatmosphere.ausys.AusysApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
