--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,5 @@ build/
 .vscode/
 ### Ocultar binarios
 /src/main/webapp/imagedata/
+### Configuracion- conexion de base de datos###
 /src/main/java/com/digitalatmosphere/ausys/JPAConfiguration.java
