--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.16.0</version>
 		</dependency>
-
+		<dependency>
+		      <groupId>com.lowagie</groupId>
+		      <artifactId>itext</artifactId>
+		      <version>2.1.7</version>
+      	</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -86,13 +90,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
-		<!-- <dependency>
-			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-core</artifactId>
-			<version>2.1.0</version>
-		</dependency>
--->
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
