--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,19 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<dependencies>
+					<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+					<dependency>
+						<groupId>net.sf.jasperreports</groupId>
+						<artifactId>jasperreports</artifactId>
+						<version>6.18.1</version>
+					</dependency>
+					<dependency>
+					      <groupId>com.lowagie</groupId>
+					      <artifactId>itext</artifactId>
+					      <version>2.1.7</version>
+			      	</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
