--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,9 @@
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>6.18.1</version>
+			<version>6.16.0</version>
 		</dependency>
-		<dependency>
-		      <groupId>com.lowagie</groupId>
-		      <artifactId>itext</artifactId>
-		      <version>2.1.7</version>
-      	</dependency>
+
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -90,6 +86,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+		<!-- <dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+-->
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -111,19 +114,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<dependencies>
-					<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
-					<dependency>
-						<groupId>net.sf.jasperreports</groupId>
-						<artifactId>jasperreports</artifactId>
-						<version>6.18.1</version>
-					</dependency>
-					<dependency>
-					      <groupId>com.lowagie</groupId>
-					      <artifactId>itext</artifactId>
-					      <version>2.1.7</version>
-			      	</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
