--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,8 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
-		<!-- <dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>6.16.0</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>net.sf.jasperreports</groupId> <artifactId>jasperreports</artifactId> 
+			<version>6.16.0</version> </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 		<dependency>
@@ -87,12 +84,8 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
-		<!-- <dependency>
-			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-core</artifactId>
-			<version>2.1.0</version>
-		</dependency>
--->
+		<!-- <dependency> <groupId>org.apache.tika</groupId> <artifactId>tika-core</artifactId> 
+			<version>2.1.0</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -112,8 +105,10 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				
 			</plugin>
 		</plugins>
 	</build>
