--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+# spring.datasource.url=jdbc:mysql://localhost/db_springboot?useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=sasa
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.hibernate.ddl-auto= create-drop
+# logging.level.org.hibernate.SQL=debug
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
